--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Sarath Chandrika K</h1>
-      <p>I'm <span class="typed" data-typed-items="Python Developer, Data Analyst, Data Engineer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Data Engineer, Data Analyst, Python Developer"></span></p>
       <div class="social-links">
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
@@ -725,9 +725,9 @@
       <!-- <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
       </div> -->
-      <div class="credits">
+<!--       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+      </div> -->
     </div>
   </footer><!-- End Footer -->
 
