updated info, picture

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Data Analyst working in the position of Associate in Data Science team at Analytical Wizards. Experienced developer in Python, SQL and Spark</p>
+          <p>Data Enthusiast working in the position of Associate in Data Science team at Definitive Healthcare. Experienced developer in Python, SQL and PySpark</p>
           <p>Masters Student pursuing MSc. in Data Science with Data Engineering Specialization from Liverpool John Moores University</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile_img.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/IMG_8261.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Data Analyst &amp; Data Engineer</h3>
@@ -95,8 +95,8 @@
               </div>
             </div>
             <p>My current study includes topics related to Data Engineering on AWS cloud, SQL, Map Reduce, Apache Spark, Spark SQL, Apache Airflow, Apache Kafa</p>
-            <p>My current personal work in Data Analysis domain includes casestudies on Exploaratory Data Analysis using Python, SQL and creating data visualization dashboards with Tableau or PowerBI.</p>
-            <p>Previously, I have 2.5 year of work experience at Robert Bosch as Python Developer, developing desktop applications using Python, PyQt.</p>
+            <p>My current personal work in Data Analysis domain includes casestudies on Exploaratory Data Analysis using Python, R, SQL and creating data visualization dashboards with Tableau or PowerBI.</p>
+            <!-- <p>Previously, I have 2.5 year of work experience at Robert Bosch as Python Developer, developing desktop applications using Python, PyQt.</p> -->
             <p>Apart from data and laptop, I am passionate about Fitness. In my free time, I cook and play violin.</p>
           </div>
         </div>
