Removed bg image

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <!-- ======= Hero Section ======= -->
   <style>
     #hero {
-      background: url('assets/img/wp.jpg') center/cover no-repeat;
+/*       background: url('assets/img/wp.jpg') center/cover no-repeat; */
       background-color: rgba(255, 255, 255, 0.1);
       /* Adjust the alpha value (0.0 to 1.0) for transparency */
     }
